# wavereader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.txt  CLAUDE.md  Dockerfile  README.md  article.qmd  db.py  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  surf_graph.py  tools.py
data/: surf_breaks.csv
data_gen/: PROMPTING.md  generate_australia_surfbreaks_oneshot.py  generate_bellsbeach_data_zeroshot.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  constants.js  index.css
frontend/src/api/: index.js
frontend/src/components/: BreakCard.jsx  ErrorBoundary.jsx  Layout.jsx  SearchBar.jsx  Skeleton.jsx  SkillFilter.jsx  StateFilter.jsx  Toast.jsx  WeatherChart.jsx
frontend/src/context/: FavoritesContext.jsx
frontend/src/hooks/: useBreakDetail.js  useBreakFilters.js  useOnlineStatus.js  useToast.js
frontend/src/pages/: BreakDetail.jsx  Favorites.jsx  Landing.jsx
frontend/src/test/: BreakCard.test.jsx  formatters.test.js  setup.js
frontend/src/utils/: formatters.js
routes/: __init__.py  breaks.py  states.py
services/: __init__.py  gemini.py  openmeteo.py
static/: app.js  break.js  browse.js  landing.js  style.css
templates/: break.html  browse.html  chat.html  index.html  landing.html
tests/: test_routes.py
