[project]
name = "smartsurf"
version = "0.1.0"
requires-python = ">=3.14.0"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn[standard]>=0.31.0",
    "jinja2>=3.1.2",
    "langgraph>=0.2.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "jupyter>=1.1.1",
]
